--- a/.gitignore
+++ b/.gitignore
@@ -99,13 +99,27 @@
 !03-*/01-*/09-*/
 !03-*/01-*/10-*/
 !03-*/01-*/10-*/Solved
+##### W3, D2 #####
 !03-*/01-*/11-*/
 !03-*/01-*/12-*/
+!03-*/01-*/12-*/Solved
 !03-*/01-*/13-*/
 !03-*/01-*/14-*/
+!03-*/01-*/14-*/Solved
 !03-*/01-*/15-*/
 !03-*/01-*/16-*/
+!03-*/01-*/16-*/Solved
 !03-*/01-*/17-*/
 !03-*/01-*/18-*/
+!03-*/01-*/18-*/Solved
 !03-*/01-*/19-*/
 !03-*/01-*/20*/
+!03-*/01-*/20*/Solved
+!03-*/01-*/21*/
+!03-*/01-*/22*/
+!03-*/01-*/23*/
+!03-*/01-*/24*/
+!03-*/01-*/25*/
+!03-*/01-*/26*/
+!03-*/01-*/27*/
+!03-*/01-*/28*/
