--- a/.gitignore
+++ b/.gitignore
@@ -115,11 +115,26 @@
 !03-*/01-*/19-*/
 !03-*/01-*/20*/
 !03-*/01-*/20*/Solved
+##### W3, D3 #####
 !03-*/01-*/21*/
 !03-*/01-*/22*/
+!03-*/01-*/22*/Solved
 !03-*/01-*/23*/
 !03-*/01-*/24*/
+!03-*/01-*/24*/Solved
 !03-*/01-*/25*/
 !03-*/01-*/26*/
+!03-*/01-*/26*/Solved
 !03-*/01-*/27*/
 !03-*/01-*/28*/
+!03-*/01-*/28*/Main
+##### W4, D1 #####
+!04-*/01-*/01-*/
+!04-*/01-*/02-*/
+!04-*/01-*/03-*/
+!04-*/01-*/04-*/
+!04-*/01-*/05-*/
+!04-*/01-*/06-*/
+!04-*/01-*/07-*/
+!04-*/01-*/08-*/
+!04-*/01-*/09-*/
