--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@
 !03-*/01-*/27*/
 !03-*/01-*/28*/
 !03-*/01-*/28*/Main
+!03-*/03-*/*/Solved
 ##### W4, D1 #####
 !04-*/01-*/01-*/
 !04-*/01-*/02-*/
