--- a/.gitignore
+++ b/.gitignore
@@ -132,11 +132,27 @@
 ##### W4, D1 #####
 !04-*/01-*/01-*/
 !04-*/01-*/02-*/
+!04-*/01-*/02-*/Solved
 !04-*/01-*/03-*/
 !04-*/01-*/04-*/
+!04-*/01-*/04-*/Solved
 !04-*/01-*/05-*/
 !04-*/01-*/06-*/
+!04-*/01-*/06-*/Solved
 !04-*/01-*/07-*/
 !04-*/01-*/08-*/
+!04-*/01-*/08-*/Solved
 !04-*/01-*/09-*/
 !04-*/01-*/10-*/
+!04-*/01-*/10-*/Solved
+##### W4, D2 #####
+!04-*/01-*/11-*/
+!04-*/01-*/12-*/
+!04-*/01-*/13-*/
+!04-*/01-*/14-*/
+!04-*/01-*/15-*/
+!04-*/01-*/16-*/
+!04-*/01-*/17-*/
+!04-*/01-*/18-*/
+!04-*/01-*/19-*/
+!04-*/01-*/20-*/
