Adds solutions for W4D2, and activities for W4D3

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,7 @@
 !03-*/01-*/27*/
 !03-*/01-*/28*/
 !03-*/01-*/28*/Main
+##### Algos #####
 !03-*/03-*/*/Solved
 ##### W4, D1 #####
 !04-*/01-*/01-*/
@@ -148,11 +149,25 @@
 ##### W4, D2 #####
 !04-*/01-*/11-*/
 !04-*/01-*/12-*/
+!04-*/01-*/12-*/Solved
 !04-*/01-*/13-*/
 !04-*/01-*/14-*/
+!04-*/01-*/14-*/Solved
 !04-*/01-*/15-*/
 !04-*/01-*/16-*/
+!04-*/01-*/16-*/Solved
 !04-*/01-*/17-*/
 !04-*/01-*/18-*/
+!04-*/01-*/18-*/Solved
 !04-*/01-*/19-*/
 !04-*/01-*/20-*/
+!04-*/01-*/20-*/Solved
+##### W4, D3 #####
+!04-*/01-*/21-*/
+!04-*/01-*/22-*/
+!04-*/01-*/23-*/
+!04-*/01-*/24-*/
+!04-*/01-*/25-*/
+!04-*/01-*/26-*/
+!04-*/01-*/27-*/
+!04-*/01-*/28-*/
