Adds solutions for W4D3, and activities for W5D1

--- a/.gitignore
+++ b/.gitignore
@@ -165,9 +165,31 @@
 ##### W4, D3 #####
 !04-*/01-*/21-*/
 !04-*/01-*/22-*/
+!04-*/01-*/22-*/Solved
 !04-*/01-*/23-*/
 !04-*/01-*/24-*/
+!04-*/01-*/24-*/Solved
 !04-*/01-*/25-*/
 !04-*/01-*/26-*/
+!04-*/01-*/26-*/Solved
 !04-*/01-*/27-*/
 !04-*/01-*/28-*/
+!04-*/01-*/28-*/Main
+##### Algos #####
+!04-*/03-*/*/Solved
+##### W5, D1 #####
+!05-*/01-*/01-*/
+!05-*/01-*/02-*/
+#!05-*/01-*/02-*/Solved
+!05-*/01-*/03-*/
+!05-*/01-*/04-*/
+#!05-*/01-*/04-*/Solved
+!05-*/01-*/05-*/
+!05-*/01-*/06-*/
+#!05-*/01-*/06-*/Solved
+!05-*/01-*/07-*/
+!05-*/01-*/08-*/
+#!05-*/01-*/08-*/Solved
+!05-*/01-*/09-*/
+!05-*/01-*/10-*/
+#!05-*/01-*/10-*/Solved
