--- a/.gitignore
+++ b/.gitignore
@@ -180,17 +180,28 @@
 ##### W5, D1 #####
 !05-*/01-*/01-*/
 !05-*/01-*/02-*/
-#!05-*/01-*/02-*/Solved
+!05-*/01-*/02-*/Solved
 !05-*/01-*/03-*/
 !05-*/01-*/04-*/
-#!05-*/01-*/04-*/Solved
+!05-*/01-*/04-*/Solved
 !05-*/01-*/05-*/
 !05-*/01-*/06-*/
-#!05-*/01-*/06-*/Solved
+!05-*/01-*/06-*/Solved
 !05-*/01-*/07-*/
 !05-*/01-*/08-*/
-#!05-*/01-*/08-*/Solved
+!05-*/01-*/08-*/Solved
 !05-*/01-*/09-*/
+##### W5, D2 #####
 !05-*/01-*/10-*/
+!05-*/01-*/11-*/
+!05-*/01-*/12-*/
+!05-*/01-*/13-*/
+!05-*/01-*/14-*/
+!05-*/01-*/15-*/
+!05-*/01-*/16-*/
+!05-*/01-*/17-*/
+!05-*/01-*/18-*/
+!05-*/01-*/19-*/
+!05-*/01-*/20-*/
 #!05-*/01-*/10-*/Solved
 !05-*/01-*/27-*/
