--- a/.gitignore
+++ b/.gitignore
@@ -193,15 +193,27 @@
 !05-*/01-*/09-*/
 ##### W5, D2 #####
 !05-*/01-*/10-*/
+!05-*/01-*/10-*/Solved
 !05-*/01-*/11-*/
 !05-*/01-*/12-*/
+!05-*/01-*/12-*/Solved
 !05-*/01-*/13-*/
+!05-*/01-*/13-*/Solved
 !05-*/01-*/14-*/
+!05-*/01-*/14-*/Solved
 !05-*/01-*/15-*/
+!05-*/01-*/16-*/Solved
 !05-*/01-*/16-*/
 !05-*/01-*/17-*/
+!05-*/01-*/18-*/Solved
 !05-*/01-*/18-*/
 !05-*/01-*/19-*/
-!05-*/01-*/20-*/
-#!05-*/01-*/10-*/Solved
+!05-*/01-*/20-*/Solved
+!05-*/01-*/21-*/
+!05-*/01-*/22-*/
+!05-*/01-*/23-*/
+!05-*/01-*/24-*/
+!05-*/01-*/25-*/
+!05-*/01-*/26-*/
 !05-*/01-*/27-*/
+!05-*/01-*/28-*/
