Adds W5D3 solutions, and W6D1 activities; plus mini project

--- a/.gitignore
+++ b/.gitignore
@@ -211,9 +211,28 @@
 !05-*/01-*/20-*/Solved
 !05-*/01-*/21-*/
 !05-*/01-*/22-*/
+!05-*/01-*/22-*/Solved
 !05-*/01-*/23-*/
 !05-*/01-*/24-*/
+!05-*/01-*/24-*/Solved
 !05-*/01-*/25-*/
 !05-*/01-*/26-*/
+!05-*/01-*/26-*/Solved
 !05-*/01-*/27-*/
 !05-*/01-*/28-*/
+!05-*/01-*/28-*/Solved
+##### Algos #####
+!05-*/03-*/*/Solved
+##### W6 #####
+!06-*/01-*/01-*
+!06-*/01-*/02-*
+!06-*/01-*/03-*
+!06-*/01-*/04-*
+!06-*/01-*/05-*
+!06-*/01-*/06-*
+!06-*/01-*/07-*
+!06-*/01-*/08-*
+!06-*/01-*/09-*
+!06-*/01-*/10-*
+### Mini Project ###
+!06-*/01-*/27-*
