--- a/.gitignore
+++ b/.gitignore
@@ -226,13 +226,28 @@
 ##### W6 #####
 !06-*/01-*/01-*
 !06-*/01-*/02-*
+!06-*/01-*/02-*/Solved
 !06-*/01-*/03-*
 !06-*/01-*/04-*
+!06-*/01-*/04-*/Solved
 !06-*/01-*/05-*
+!06-*/01-*/06-*/Solved
 !06-*/01-*/06-*
 !06-*/01-*/07-*
 !06-*/01-*/08-*
+!06-*/01-*/08-*/Solved
 !06-*/01-*/09-*
 !06-*/01-*/10-*
+!06-*/01-*/10-*/Solved
 ### Mini Project ###
+!06-*/01-*/11-*
+!06-*/01-*/12-*
+!06-*/01-*/13-*
+!06-*/01-*/14-*
+!06-*/01-*/15-*
+!06-*/01-*/16-*
+!06-*/01-*/17-*
+!06-*/01-*/18-*
+!06-*/01-*/19-*
+!06-*/01-*/20-*
 !06-*/01-*/27-*
