--- a/.gitignore
+++ b/.gitignore
@@ -242,13 +242,24 @@
 ### Mini Project ###
 !06-*/01-*/11-*
 !06-*/01-*/12-*
+!06-*/01-*/12-*/Solved
 !06-*/01-*/13-*
 !06-*/01-*/14-*
+!06-*/01-*/14-*/Solved
 !06-*/01-*/15-*
 !06-*/01-*/16-*
+!06-*/01-*/16-*/Solved
 !06-*/01-*/17-*
 !06-*/01-*/18-*
+!06-*/01-*/18-*/Solved
 !06-*/01-*/19-*
 !06-*/01-*/20-*
+!06-*/01-*/20-*/Solved
+!06-*/01-*/21-*
+!06-*/01-*/22-*
+!06-*/01-*/23-*
+!06-*/01-*/24-*
 !06-*/01-*/25-*
+!06-*/01-*/26-*
+### Mini Project ###
 !06-*/01-*/27-*
