Adds solved for W6D3, and Project 1 requirements for Week 7

--- a/.gitignore
+++ b/.gitignore
@@ -257,9 +257,14 @@
 !06-*/01-*/20-*/Solved
 !06-*/01-*/21-*
 !06-*/01-*/22-*
+!06-*/01-*/22-*/Solved
 !06-*/01-*/23-*
 !06-*/01-*/24-*
+!06-*/01-*/24-*/Solved
 !06-*/01-*/25-*
 !06-*/01-*/26-*
+!06-*/01-*/26-*/Solved
 ### Mini Project ###
 !06-*/01-*/27-*
+##### Algos #####
+!06-*/03-*/*/Solved
