Fixes 27-Mini-Project solution not pushed

--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,6 @@
 !06-*/01-*/26-*/Solved
 ### Mini Project ###
 !06-*/01-*/27-*
-!06-*/01-*/27-*/Solved
+!06-*/01-*/27-*/Main
 ##### Algos #####
 !06-*/03-*/*/Solved
