--- a/.gitignore
+++ b/.gitignore
@@ -220,7 +220,7 @@
 !05-*/01-*/26-*/Solved
 !05-*/01-*/27-*/
 !05-*/01-*/28-*/
-!05-*/01-*/28-*/Solved
+!05-*/01-*/28-*/Main
 ##### Algos #####
 !05-*/03-*/*/Solved
 ##### W6 #####
