--- a/.gitignore
+++ b/.gitignore
@@ -269,15 +269,15 @@
 !06-*/01-*/27-*/Main
 ##### Algos #####
 !06-*/03-*/*/Solved
-##### W7 #####
-!08/01-*/01
-!08/01-*/02
-!08/01-*/03
-!08/01-*/04
-!08/01-*/05
-!08/01-*/06
-!08/01-*/07
-!08/01-*/08
-!08/01-*/09
-!08/01-*/10
-!28-Stu_Mini-Project
+##### W9 #####
+!09-*/01-*/01-*
+!09-*/01-*/02-*
+!09-*/01-*/03-*
+!09-*/01-*/04-*
+!09-*/01-*/05-*
+!09-*/01-*/06-*
+!09-*/01-*/07-*
+!09-*/01-*/08-*
+!09-*/01-*/09-*
+!09-*/01-*/10-*
+!09-*/01-*/28-Stu_Mini-Project
