--- a/.gitignore
+++ b/.gitignore
@@ -271,14 +271,19 @@
 !06-*/03-*/*/Solved
 ##### W9 #####
 !09-*/01-*/01-*
+!09-*/01-*/02-*
 !09-*/01-*/02-*/Solved
 !09-*/01-*/03-*
-!09-*/01-*/04-*/Solved
+!09-/01-*/04-*
+!09-/01-*/04-*/Solved
 !09-*/01-*/05-*
+!09-*/01-*/06-*
 !09-*/01-*/06-*/Solved
 !09-*/01-*/07-*
+!09-*/01-*/08-*
 !09-*/01-*/08-*/Solved
 !09-*/01-*/09-*
+!09-*/01-*/10-*
 !09-*/01-*/10-*/Solved
 !09-*/01-*/11-*
 !09-*/01-*/12-*
