Adds solutions for W9D2, and Activities for W9D3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 */01-*/*
 */*/*/Solved
+\node_modules
+\package-lock.json
 #Mini Project
 */*/*/Main
 #Challenge
@@ -287,12 +289,24 @@
 !09-*/01-*/10-*/Solved
 !09-*/01-*/11-*
 !09-*/01-*/12-*
+!09-*/01-*/12-*/Solved
 !09-*/01-*/13-*
 !09-*/01-*/14-*
+!09-*/01-*/14-*/Solved
 !09-*/01-*/15-*
 !09-*/01-*/16-*
+!09-*/01-*/16-*/Solved
 !09-*/01-*/17-*
 !09-*/01-*/18-*
+!09-*/01-*/18-*/Solved
 !09-*/01-*/19-*
 !09-*/01-*/20-*
+!09-*/01-*/20-*/Solved
+!09-*/01-*/21-*
+!09-*/01-*/22-*
+!09-*/01-*/23-*
+!09-*/01-*/24-*
+!09-*/01-*/25-*
+!09-*/01-*/26-*
+!09-*/01-*/27-*
 !09-*/01-*/28-Stu_Mini-Project
