--- a/.gitignore
+++ b/.gitignore
@@ -304,9 +304,32 @@
 !09-*/01-*/20-*/Solved
 !09-*/01-*/21-*
 !09-*/01-*/22-*
+!09-*/01-*/22-*/Solved
 !09-*/01-*/23-*
 !09-*/01-*/24-*
+!09-*/01-*/24-*/Solved
 !09-*/01-*/25-*
 !09-*/01-*/26-*
+!09-*/01-*/26-*/Solved
 !09-*/01-*/27-*
 !09-*/01-*/28-Stu_Mini-Project
+!09-*/01-*/28-Stu_Mini-Project/Main
+##### Algos #####
+!09-*/03-*/*/Solved
+#### W10 ######
+!10-*/01-*/01-*
+!10-*/01-*/02-*
+#!10-*/01-*/02-*/Solved
+!10-*/01-*/03-*
+!10-/01-*/04-*
+#!10-/01-*/04-*/Solved
+!10-*/01-*/05-*
+!10-*/01-*/06-*
+#!10-*/01-*/06-*/Solved
+!10-*/01-*/07-*
+!10-*/01-*/08-*
+#!10-*/01-*/08-*/Solved
+!10-*/01-*/09-*
+!10-*/01-*/10-*
+#!10-*/01-*/10-*/Solved
+!10-*/01-*/28-Stu_Mini-Project
