--- a/.gitignore
+++ b/.gitignore
@@ -319,17 +319,27 @@
 #### W10 ######
 !10-*/01-*/01-*
 !10-*/01-*/02-*
-#!10-*/01-*/02-*/Solved
+!10-*/01-*/02-*/Solved
 !10-*/01-*/03-*
 !10-*/01-*/04-*
-#!10-/01-*/04-*/Solved
+!10-/01-*/04-*/Solved
 !10-*/01-*/05-*
 !10-*/01-*/06-*
 #!10-*/01-*/06-*/Solved
 !10-*/01-*/07-*
 !10-*/01-*/08-*
-#!10-*/01-*/08-*/Solved
+!10-*/01-*/08-*/Solved
 !10-*/01-*/09-*
 !10-*/01-*/10-*
-#!10-*/01-*/10-*/Solved
+!10-*/01-*/10-*/Solved
+!10-*/01-*/11-*
+!10-*/01-*/12-*
+!10-*/01-*/13-*
+!10-*/01-*/14-*
+!10-*/01-*/15-*
+!10-*/01-*/16-*
+!10-*/01-*/17-*
+!10-*/01-*/18-*
+!10-*/01-*/19-*
+!10-*/01-*/20-*
 !10-*/01-*/28-Stu_Mini-Project
