--- a/.gitignore
+++ b/.gitignore
@@ -334,12 +334,24 @@
 !10-*/01-*/10-*/Solved
 !10-*/01-*/11-*
 !10-*/01-*/12-*
+!10-*/01-*/12-*/Solved
 !10-*/01-*/13-*
 !10-*/01-*/14-*
+!10-*/01-*/14-*/Solved
 !10-*/01-*/15-*
 !10-*/01-*/16-*
+!10-*/01-*/16-*/Solved
 !10-*/01-*/17-*
 !10-*/01-*/18-*
+!10-*/01-*/18-*/Solved
 !10-*/01-*/19-*
 !10-*/01-*/20-*
+!10-*/01-*/20-*/Solved
+!10-*/01-*/21-*
+!10-*/01-*/22-*
+!10-*/01-*/23-*
+!10-*/01-*/24-*
+!10-*/01-*/25-*
+!10-*/01-*/26-*
+!10-*/01-*/27-*
 !10-*/01-*/28-Stu_Mini-Project
