Adds solutions for W10D3

--- a/.gitignore
+++ b/.gitignore
@@ -349,9 +349,13 @@
 !10-*/01-*/20-*/Solved
 !10-*/01-*/21-*
 !10-*/01-*/22-*
+!10-*/01-*/22-*/Solved
 !10-*/01-*/23-*
 !10-*/01-*/24-*
+!10-*/01-*/24-*/Solved
 !10-*/01-*/25-*
 !10-*/01-*/26-*
+!10-*/01-*/26-*/Solved
 !10-*/01-*/27-*
 !10-*/01-*/28-Stu_Mini-Project
+!10-*/01-*/28-Stu_Mini-Project/Main
