--- a/.gitignore
+++ b/.gitignore
@@ -364,12 +364,26 @@
 ### Week 10 ####
 !11-*/01-*/01-*
 !11-*/01-*/02-*
+!11-*/01-*/02-*/Solved
 !11-*/01-*/03-*
 !11-*/01-*/04-*
+!11-*/01-*/04-*/Solved
 !11-*/01-*/05-*
-!11-*/01-*/06-*
+!11-*/01-*/06-*/Solved
 !11-*/01-*/07-*
 !11-*/01-*/08-*
+!11-*/01-*/08-*/Solved
 !11-*/01-*/09-*
 !11-*/01-*/10-*
+!11-*/01-*/10-*/Solved
+!11-*/01-*/11-*
+!11-*/01-*/12-*
+!11-*/01-*/13-*
+!11-*/01-*/14-*
+!11-*/01-*/15-*
+!11-*/01-*/16-*
+!11-*/01-*/17-*
+!11-*/01-*/18-*
+!11-*/01-*/19-*
+!11-*/01-*/20-*
 !11-*/01-*/28-Stu_Mini-Project
