Adds W11D2 solutions, and W11D3 activities

--- a/.gitignore
+++ b/.gitignore
@@ -378,12 +378,24 @@
 !11-*/01-*/10-*/Solved
 !11-*/01-*/11-*
 !11-*/01-*/12-*
+!11-*/01-*/12-*/Solved
 !11-*/01-*/13-*
 !11-*/01-*/14-*
+!11-*/01-*/14-*/Solved
 !11-*/01-*/15-*
 !11-*/01-*/16-*
+!11-*/01-*/16-*/Solved
 !11-*/01-*/17-*
 !11-*/01-*/18-*
+!11-*/01-*/18-*/Solved
 !11-*/01-*/19-*
 !11-*/01-*/20-*
+!11-*/01-*/20-*/Solved
+!11-*/01-*/21-*
+!11-*/01-*/22-*
+!11-*/01-*/23-*
+!11-*/01-*/24-*
+!11-*/01-*/25-*
+!11-*/01-*/26-*
+!11-*/01-*/27-*
 !11-*/01-*/28-Stu_Mini-Project
