Adds solutions for W11D3, and activitties for W12D1

--- a/.gitignore
+++ b/.gitignore
@@ -392,10 +392,28 @@
 !11-*/01-*/20-*
 !11-*/01-*/20-*/Solved
 !11-*/01-*/21-*
-!11-*/01-*/22-*
+!11-*/01-*/22-*/Solved
 !11-*/01-*/23-*
-!11-*/01-*/24-*
+!11-*/01-*/24-*/Solved
 !11-*/01-*/25-*
 !11-*/01-*/26-*
 !11-*/01-*/27-*
 !11-*/01-*/28-Stu_Mini-Project
+!11-*/01-*/28-Stu_Mini-Project/Main
+##### Algos #####
+!11-*/03-*/*/Solved
+#### Week 12 ####
+!12-*/01-*/01-*
+!12-*/01-*/02-*
+#!12-*/01-*/02-*/Solved
+!12-*/01-*/03-*
+!12-*/01-*/04-*
+#!12-*/01-*/04-*/Solved
+!12-*/01-*/05-*
+#!12-*/01-*/06-*/Solved
+!12-*/01-*/07-*
+!12-*/01-*/08-*
+#!12-*/01-*/08-*/Solved
+!12-*/01-*/09-*
+!12-*/01-*/10-*
+#!12-*/01-*/10-*/Solved
