Adds W12D1 missing activity, 06 tables

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 */*/*/Solved
 \node_modules
 \package-lock.json
+001-fist-of-five-background.jpg
 #Mini Project
 */*/*/Main
 #Challenge
@@ -410,6 +411,7 @@
 !12-*/01-*/04-*
 #!12-*/01-*/04-*/Solved
 !12-*/01-*/05-*
+!12-*/01-*/06-*
 #!12-*/01-*/06-*/Solved
 !12-*/01-*/07-*
 !12-*/01-*/08-*
