--- a/.gitignore
+++ b/.gitignore
@@ -406,17 +406,17 @@
 #### Week 12 ####
 !12-*/01-*/01-*
 !12-*/01-*/02-*
-#!12-*/01-*/02-*/Solved
+!12-*/01-*/02-*/Solved
 !12-*/01-*/03-*
 !12-*/01-*/04-*
-#!12-*/01-*/04-*/Solved
+!12-*/01-*/04-*/Solved
 !12-*/01-*/05-*
 !12-*/01-*/06-*
-#!12-*/01-*/06-*/Solved
+!12-*/01-*/06-*/Solved
 !12-*/01-*/07-*
 !12-*/01-*/08-*
-#!12-*/01-*/08-*/Solved
+!12-*/01-*/08-*/Solved
 !12-*/01-*/09-*
 !12-*/01-*/10-*
-#!12-*/01-*/10-*/Solved
+!12-*/01-*/10-*/Solved
 !12-*/01-*/28-Stu_Mini-Project/
