Adds Heroku demo solution

--- a/.gitignore
+++ b/.gitignore
@@ -398,6 +398,7 @@
 !11-*/01-*/24-*/Solved
 !11-*/01-*/25-*
 !11-*/01-*/26-*
+!11-*/01-*/26-*/Solved
 !11-*/01-*/27-*
 !11-*/01-*/28-Stu_Mini-Project
 !11-*/01-*/28-Stu_Mini-Project/Main
