--- a/.gitignore
+++ b/.gitignore
@@ -422,13 +422,18 @@
 !12-*/01-*/10-*/Solved
 !12-*/01-*/11-*
 !12-*/01-*/12-*
+!12-*/01-*/12-*/Solved
 !12-*/01-*/13-*
 !12-*/01-*/14-*
+12-*/01-*/14-*/Solved
 !12-*/01-*/15-*
 !12-*/01-*/16-*
+!12-*/01-*/16-*/Solved
 !12-*/01-*/17-*
 !12-*/01-*/18-*
+!12-*/01-*/18-*/Solved
 !12-*/01-*/19-*
 !12-*/01-*/20-*
+!12-*/01-*/20-*/Solved
 !12-*/01-*/28-Stu_Mini-Project/
 12-*/00-*
