Adds solutions for W12D3

--- a/.gitignore
+++ b/.gitignore
@@ -437,10 +437,14 @@
 !12-*/01-*/20-*/Solved
 !12-*/01-*/21-*
 !12-*/01-*/22-*
+!12-*/01-*/22-*/Solved
 !12-*/01-*/23-*
 !12-*/01-*/24-*
+!12-*/01-*/24-*/Solved
 !12-*/01-*/25-*
 !12-*/01-*/26-*
+!12-*/01-*/26-*/Solved
 !12-*/01-*/27-*
 !12-*/01-*/28-Stu_Mini-Project/
+!12-*/01-*/28-Stu_Mini-Project/Main
 12-*/00-*
