--- a/.gitignore
+++ b/.gitignore
@@ -452,19 +452,19 @@
 #### Week 13 ######
 !13-*/01-*/01-*
 !13-*/01-*/02-*
-#!13-*/01-*/02-*/Solved
+!13-*/01-*/02-*/Solved
 !13-*/01-*/03-*
 !13-*/01-*/04-*
-#!13-*/01-*/04-*/Solved
+!13-*/01-*/04-*/Solved
 !13-*/01-*/05-*
 !13-*/01-*/06-*
-#!13-*/01-*/06-*/Solved
+!13-*/01-*/06-*/Solved
 !13-*/01-*/07-*
 !13-*/01-*/08-*
-#!13-*/01-*/08-*/Solved
+!13-*/01-*/08-*/Solved
 !13-*/01-*/09-*
 !13-*/01-*/10-*
-#!13-*/01-*/10-*/Solved
+!13-*/01-*/10-*/Solved
 # !13-*/01-*/11-*
 # !13-*/01-*/12-*
 # !13-*/01-*/12-*/Solved
