--- a/.gitignore
+++ b/.gitignore
@@ -467,19 +467,19 @@
 !13-*/01-*/10-*/Solved
 !13-*/01-*/11-*
 !13-*/01-*/12-*
-# !13-*/01-*/12-*/Solved
+!13-*/01-*/12-*/Solved
 !13-*/01-*/13-*
 !13-*/01-*/14-*
-# 12-*/01-*/14-*/Solved
+!13-*/01-*/14-*/Solved
 !13-*/01-*/15-*
 !13-*/01-*/16-*
-# !13-*/01-*/16-*/Solved
+!13-*/01-*/16-*/Solved
 !13-*/01-*/17-*
 !13-*/01-*/18-*
-# !13-*/01-*/18-*/Solved
+!13-*/01-*/18-*/Solved
 !13-*/01-*/19-*
 !13-*/01-*/20-*
-# !13-*/01-*/20-*/Solved
+!13-*/01-*/20-*/Solved
 # !13-*/01-*/21-*
 # !13-*/01-*/22-*
 # !13-*/01-*/22-*/Solved
