Adds solutions for W13D3

--- a/.gitignore
+++ b/.gitignore
@@ -482,12 +482,13 @@
 !13-*/01-*/20-*/Solved
 !13-*/01-*/21-*
 !13-*/01-*/22-*
-# !13-*/01-*/22-*/Solved
+!13-*/01-*/22-*/Solved
 !13-*/01-*/23-*
 !13-*/01-*/24-*
-# !13-*/01-*/24-*/Solved
+!13-*/01-*/24-*/Solved
 !13-*/01-*/25-*
 !13-*/01-*/26-*
-# !13-*/01-*/26-*/Solved
+!13-*/01-*/26-*/Solved
 !13-*/01-*/27-*
 !13-*/01-*/28-Stu_Mini-Project/
+!13-*/01-*/28-Stu_Mini-Project/Main
