--- a/13-ORM/01-Activities/27-Evr_Eslint/Unsolved/package.json
+++ b/13-ORM/01-Activities/27-Evr_Eslint/Unsolved/package.json
@@ -10,6 +10,10 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.9.0"
+    "eslint": "^8.31.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
