--- a/13-ORM/01-Activities/28-Stu_Mini-Project/Main/package.json
+++ b/13-ORM/01-Activities/28-Stu_Mini-Project/Main/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "library-api",
+  "name": "traveller-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seed/seeds"
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,11 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1"
   }
 }
