Adds solved algos

--- a/.gitignore
+++ b/.gitignore
@@ -449,6 +449,8 @@
 !12-*/01-*/28-Stu_Mini-Project/
 !12-*/01-*/28-Stu_Mini-Project/Main
 12-*/00-*
+##### Algos #####
+!12-*/03-*/*/Solved
 #### Week 13 ######
 !13-*/01-*/01-*
 !13-*/01-*/02-*
@@ -492,3 +494,5 @@
 !13-*/01-*/27-*
 !13-*/01-*/28-Stu_Mini-Project/
 !13-*/01-*/28-Stu_Mini-Project/Main
+##### Algos #####
+!13-*/03-*/*/Solved
