Adds ESLint solution

--- a/.gitignore
+++ b/.gitignore
@@ -492,6 +492,7 @@
 !13-*/01-*/26-*
 !13-*/01-*/26-*/Solved
 !13-*/01-*/27-*
+!13-*/01-*/27-*/Solved
 !13-*/01-*/28-Stu_Mini-Project/
 !13-*/01-*/28-Stu_Mini-Project/Main
 ##### Algos #####
